# bydantic

./: .pre-commit-config.yaml  README.md  pyproject.toml
bydantic/: __init__.py  byte_model.py
bydantic.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test.py
